--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,19 @@ tags
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# Created by https://www.gitignore.io/api/codekit
+# Edit at https://www.gitignore.io/?templates=codekit
+
+### CodeKit ###
+# General CodeKit files to ignore
+config.codekit
+config.codekit3
+/min
+
+### CodeKit Patch ###
+*/codekit-config.json
+.codekit-cache
+
+# End of https://www.gitignore.io/api/codekit
