--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,10 @@
       "react/prop-types": ["warn"],
       "no-return-assign": ["off"],
       "react/jsx-one-expression-per-line": ["off"],
-      "jsx-a11y/label-has-for": ["off"]
+      "jsx-a11y/label-has-for": ["off"],
+      "jsx-a11y/label-has-associated-control": [ 2, {
+        "controlComponents": ["TimeField"],
+        "depth": 2,
+      }]
     }
 }
