--- a/nginx.conf
+++ b/nginx.conf
@@ -1,25 +1,25 @@
-server {
-    listen      80;
-    server_name .pace-calc.nu;
+user                            root;
+worker_processes                auto;
+error_log                       /var/log/nginx/error.log warn;
 
-    return      301 https://$server_name$request_uri;
+events {
+    worker_connections          1024;
 }
 
-server {
-    listen              443 ssl;
-    listen              [::]:443 ssl;
-    server_name         .pace-calc.nu;
-    ssl_certificate     /etc/letsencrypt/live/pace-calc.nu/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/pace-calc.nu/privkey.pem; # managed by Certbot
-
-    index               index.html index.htm;
-
-    access_log          /var/log/nginx/pace-calc.nu.log;
-    error_log           /var/log/nginx/pace-calc.nu.log;
-
-    location / {
-        root      /opt/www/pace-calculator/build;
-        try_files $uri $uri/ /index.html;
-        allow     all;
+http {
+    include                     /etc/nginx/mime.types;
+    default_type                application/octet-stream;
+    sendfile                    off;
+    access_log                  off;
+    keepalive_timeout           3000;
+    server {
+        listen      8080;
+        server_name localhost;
+        root        /usr/share/nginx/html;
+        index       index.html;
+        location    / {
+            try_files $uri $uri/ /index.html;
+            allow all;
+        }
     }
 }
