--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-eslint": "^10.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-compound-slider": "^2.2.0",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^5.0.1",
     "react-simple-timefield": "^1.3.2"
   },
   "scripts": {
