--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "babel-eslint": "^10.1.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-compound-slider": "^2.2.0",
-    "react-dom": "^16.8.6",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-compound-slider": "^3.4.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "react-simple-timefield": "^1.3.2"
+    "react-simple-timefield": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,13 +33,15 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.3",
-    "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.1",
-    "sass": "^1.22.9"
+    "@babel/eslint-parser": "^7.23.3",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.0.0",
+    "pretty-quick": "^3.1.1",
+    "sass": "^1.69.5"
   }
 }
