--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,10 @@
 {
   "parser": "@babel/eslint-parser",
     "parserOptions": {
-      "sourceType": "module",
       "allowImportExportEverywhere": false,
-      "codeFrame": false
+      "codeFrame": false,
+      "requireConfigFile": false,
+      "sourceType": "module"
     },
     "plugins": ["prettier"],
     "extends": ["airbnb", "plugin:prettier/recommended"],
